duniverse/menhirLib.20200211/test/static/bad/parameterized-start.exp
File "parameterized-start.mly", line 3, characters 13-17:
Error: how is the symbol "main" parameterized?
It is used at sorts * and (*) -> *.
The sort * is not compatible with the sort (*) -> *.
